          policies set on it.

        * orbsvcs/tests/Notify/RT_lib/RT_POA_Command.cpp:

          The RT POA is created with the implicit activation policy.

        * orbsvcs/tests/Notify/lib/Makefile:
        * orbsvcs/tests/Notify/lib/Makefile.bor:
        * orbsvcs/tests/Notify/RT_lib/Makefile:
        * orbsvcs/tests/Notify/lib/Test_Filter:

          Updated.

Tue Jun 03 07:52:12 2003  Simon McQueen  <sm@prismtechnologies.com>

        * TAO version 1.3.2 released.

Mon Jun  2 00:44:59 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/LifeCycleService.idl (LifeCycleService): Fixed
	  a stupid typo. Actually caught this a half an hour back but
	  couldnt  get this into the repository.

Mon Jun  2 00:25:39 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/IDL_Test/Makefile: Disable the test if
	  templates=explicit. The test is sufficiently complicated (for
	  very good reasons) to get it right with explicit template
	  instantiations. It is easy to fix the problem by changing the
	  way the IDL's are specified. But we dont want to loose the
	  structure of the exisiting IDL files in our test directories.

	  Once we have a nice way to handle these cases with explicit
	  templates we can revert this. We will open up a bugzilla entry
	  to remind us. The IDL compiler needs to get smarterwith users
	  cooperation to handle all this weird cases.

Sun Jun  1 23:38:40 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* Makefile: Added paths to the CONTROLLE_FILES

Sun Jun 01 19:34:53 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/LifeCycleService.idl (LifeCycleService): Added a
	  work  around for linking errors that show up in SunCC
	  builds. The problem was that there was a typedef for the same
	  sequence in two different IDL files (ie. in this file and
	  CosLifeCycle.idl). This generated two explicit template
	  instantiations which lead to multiply defined symbols. The IDL