@@ -27,7 +27,7 @@ static Command_Builder "PeriodicConsumer -Subscription c1 +Path1"
 
 static Command_Builder "Filter -CreateFilter f_c1 ff"
 static Command_Builder "Filter -Add_Constraint f_c1 'PoolId = 1'"
-static Command_Builder "Filter -Add_Constraint f_c1 'LaneId = 1'"
+static Command_Builder "Filter -Add_Constraint f_c1 'LaneId = 0'"
 
 static Command_Builder "Filter -Add_Filter f_c1 c1_proxy"
 
@@ -37,7 +37,7 @@ static Command_Builder "PeriodicConsumer -Subscription c2 +Path2"
 
 static Command_Builder "Filter -CreateFilter f_c2 ff"
 static Command_Builder "Filter -Add_Constraint f_c2 'PoolId = 1'"
-static Command_Builder "Filter -Add_Constraint f_c2 'LaneId = 2'"
+static Command_Builder "Filter -Add_Constraint f_c2 'LaneId = 1'"
 
 static Command_Builder "Filter -Add_Filter f_c2 c2_proxy"
 
@@ -47,7 +47,7 @@ static Command_Builder "PeriodicConsumer -Subscription c3 +Path3"
 
 static Command_Builder "Filter -CreateFilter f_c3 ff"
 static Command_Builder "Filter -Add_Constraint f_c3 'PoolId = 1'"
-static Command_Builder "Filter -Add_Constraint f_c3 'LaneId = 3'"
+static Command_Builder "Filter -Add_Constraint f_c3 'LaneId = 2'"
 
 static Command_Builder "Filter -Add_Filter f_c3 c3_proxy"
 
